fixed blog links and overflow for all pages except blog

--- a/domains/www.aiscreen.io/wp-content/themes/aiscreen/src/sass/_index.scss
+++ b/domains/www.aiscreen.io/wp-content/themes/aiscreen/src/sass/_index.scss
@@ -3,6 +3,9 @@
 @import "_variables.scss";
 //End Variables
 // ========================================
+
+main:not(.tw-blog-single, .tw-blog) {overflow: hidden;}
+
 // BLOCK HEADER
 .bl_header {
   position: relative;
